(library
 (name api_services)
 (wrapped false)
 (modules encoding services)
 (libraries ez_api ez_api.request data_common)
 (preprocess (pps ppx_deriving_encoding)))

(library
 (name api_lib)
 (wrapped false)
 (modules handlers api server)
 (libraries ez_api.server ez_api.server_session api_services db_lwt safepass))

(executable
 (name api_server)
 (modules api_server)
 (libraries api_lib))
