(executable
 (name reqs)
 (optional)
 (modules reqs)
 (libraries ez_api ez_api.req ez_api.req_lwt ez_api.request ez_api.session_client 
            data_common api_services safepass ez_api.icohttp ez_api.icohttp_lwt
            ez_api.server ez_api.server_session)
(preprocess (pps lwt_ppx)))

(executable
(name ex)
(modules ex)
(libraries lwt cohttp-lwt-unix cohttp))